Added new branch and css basic

--- a/css/default.css
+++ b/css/default.css
@@ -4,3 +4,15 @@
     font-weight: bold;
 
 }
+
+.sectionClass{
+
+    background-color: aquamarine;
+    margin: 2rem ;
+    margin-inline-end: 60%;
+   
+
+ 
+
+}
+
